# makbe-ff

./: Cargo.toml  LICENSE  README.md
.cargo/: config
examples/column13ansi/: Cargo.toml  README.md
examples/column13ansi/src/: layout.rs
examples/matagi/: Cargo.toml  README.md
examples/matagi/.cargo/: config
examples/matagi/src/: layout.rs  main.rs  usb_reporter.rs
examples/minimaru4x4_xiao/: Cargo.toml
src/: debouncer.rs  device.rs  evaluator.rs  event.rs  i2c.rs  key_switch.rs  lib.rs  reporter.rs  scanner.rs  switch.rs
src/devices/: mod.rs  tca9554.rs  tca9555.rs
