[package]
name = "makbe"
version = "0.1.0"
authors = ["kazhida <kazhida@abplus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = "0.1.0"
heapless = "0.5"
embedded-hal = "0.2"
generic-array = "0.14"
either = { version = "1.6", default-features = false }
