[package]
name = "matagi"
version = "0.1.0"
authors = ["kazhida <kazhida@abplus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = "0.1.0"
cortex-m-rtic = "0.5"
panic-halt = "0.2"
heapless = "0.5"
paste = "1.0"
usb-device = "0.2"
usbd-serial = "0.1"
nb = "1.0.0"

[dependencies.makbe-ff]
path = "../.."

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.xiao_m0]
version = "0.9.0"
features = ["usb", "rt"]
